--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@feathersjs/transport-commons": "^4.5.7",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "feathers-authentication-hooks": "^1.0.2",
     "feathers-hooks-common": "^5.0.3",
     "feathers-mongoose": "^8.3.1",
