--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@feathersjs/transport-commons": "^4.5.7",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "date-fns": "^2.16.0",
     "dotenv": "^8.2.0",
     "feathers-authentication-hooks": "^1.0.2",
     "feathers-hooks-common": "^5.0.3",
